--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,13 +28,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">New Car</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="NewCars">New Car</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Used Car</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UsedCars">Used Car</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Offer Your Car</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="OfferYourCar">Offer Your Car</a>
                         </li>
                     </ul>
                     <!-- Icons on the right side -->
